@startuml


class Parameter {
-int code
-String shortName
-String description
-double upperReferenceValue
-double lowerReferenceValue

+Parameter(shortName, code, description)
}

class CreateNewParameterUI{
}

class CreateNewParameterController{

+getCategoryList()
+createNewParameter()
+saveParameter(category)
}

class Company{
-String designation
-List<Category> parameterCategoryList

+getCategoryList()
}

class Category {
-String code
-String description
-int nhsID
-List<Parameter> parameterList

+saveParameter(parameter)
+validateParameter(parameter)
+addParameter(parameter)
}

CreateNewParameterUI ...> CreateNewParameterController
CreateNewParameterController ...> Category
CreateNewParameterController ...> Company
Category "*"--"1" Parameter : presented under <

@enduml